changes in styling

--- a/src/Components/DragDrop/DragDrop.css
+++ b/src/Components/DragDrop/DragDrop.css
@@ -5,28 +5,54 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 80%;
+  height: 70%;
 }
 
 .dropzone {
-  border: 2px dashed var(--border-color);
   border-radius: 10px;
-  margin: 30px;
+  width: 100%;
+  margin: 10px;
   transition: 0.2s all ease-in;
 }
 
 img {
-  width: 80%;
-  height: 80%;
+  width: 75vw;
+  height: 70vh;
+  background-size: contain;
 }
 
 .progress {
-  position: absolute;
-  align-items: center;
-  align-content: center;
-  align-self: center;
-  justify-content: center;
-  width: 60%;
-  height: 30%;
-  top: 40%;
-  transform: scale(0.7);
+  margin: 10px 15px;
+  z-index: 1;
+  position: relative;
+  width: calc(100% - 30px);
+  bottom: 300px;
 }
+
+.progress-bar {
+  position: absolute;
+  display: block;
+  width: 100%;
+}
+
+@media screen and (max-width: 450px) {
+  .card {
+    width: 80%;
+    height: 30%;
+  }
+
+  img {
+    height: 25vh;
+    background-size: contain;
+  }
+
+  .progress {
+    margin: 10px 15px;
+    z-index: 1;
+    position: relative;
+    width: calc(100% - 30px);
+    bottom: 175px;
+  }
+}
+
