--- a/src/Components/Result/Result.css
+++ b/src/Components/Result/Result.css
@@ -1,10 +1,4 @@
 .card {
-  display: flex;
-  margin: 30px;
-  width: 60%;
-  height: 50%;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
   margin: 10px;
   flex-direction: column;
 }
@@ -39,7 +33,8 @@ input {
   background: #f5fcff;
 }
 
-img{
-  width: 60%;
-  height: 60%;
+.img {
+  width: 30vw;
+  height: 30vh;
+  background-size: contain;
 }
